--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gocsp",
   "version": "0.0.1",
   "description": "CSP channel and coroutine in Javascript",
-  "main": "./lib/go.js",
+  "main": "./index.js",
   "directories": {
     "example": "examples"
   },
