--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "CSP channel and coroutine in Javascript",
   "main": "./index.js",
+  "bin": {
+    "gocsp": "lib/cli.js"
+  },
   "directories": {
     "example": "examples"
   },
@@ -18,5 +21,5 @@
   "author": "Yunsong Guo",
   "license": "MIT",
   "bugs": { "url": "https://github.com/gyson/gocsp/issues" },
-  "engines": { "node": ">= 0.11.7" }
+  "engines": { "node": ">= 0.11.11" }
 }
