--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   },
   "engines": {
     "node": ">= 0.11.13"
+  },
+  "devDependencies": {
+    "benchmark": "^1.0.0",
+    "bluebird": "^2.3.2",
+    "genny": "^0.5.5",
+    "q": "^1.0.1",
+    "suspend": "^0.6.0"
   }
 }
