--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
     "node": ">= 0.11.13"
   },
   "devDependencies": {
-    "benchmark": "^1.0.0",
-    "bluebird": "^2.3.2",
-    "mocha": "^1.21.4"
+    "benchmark": "1.0.0"
   },
   "dependencies": {
-    "transy": "0.0.4",
-    "ws": "^0.4.32"
+    "bluebird": "2.3.5",
+    "transy": "0.0.4"
   }
 }
