--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "node": ">= 0.11.13"
   },
   "devDependencies": {
-    "benchmark": "1.0.0"
+    "co": "^3.1.0",
+    "nask-bench": "*",
+    "nask-test": "*"
   },
   "dependencies": {
     "bluebird": "2.3.5",
+    "link-list": "0.0.1",
     "transy": "0.0.4"
   }
 }
