--- a/package.json
+++ b/package.json
@@ -17,17 +17,6 @@
   "bugs": {
     "url": "https://github.com/gyson/gocsp/issues"
   },
-  "engines": {
-    "node": ">= 0.11.13"
-  },
-  "devDependencies": {
-    "co": "^3.1.0",
-    "nask-bench": "*",
-    "nask-test": "*"
-  },
-  "dependencies": {
-    "bluebird": "2.3.5",
-    "link-list": "0.0.1",
-    "transy": "0.0.4"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
